# scaffoldr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yaml  pyproject.toml  pyrightconfig.json  ruff.toml  test_cli.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  delete.yml  release.yml
.ruler/: AGENTS.md  FASTAPI.md  ruler.toml
scripts/: venv
src/scaffoldr/: app.py  banner.py
src/scaffoldr/animation/: __init__.py  banner.py
src/scaffoldr/cli/: __init__.py  generate.py
src/scaffoldr/core/constants/: __init__.py  art.py  const.py
src/scaffoldr/core/utils/: __init__.py  helper.py
src/scaffoldr/templates/fastapi_template/{{ project_name }}/: .dockerignore  .gitignore  README.md.jinja  pyproject.toml.jinja
templates/fastapi_template/{{ project_name }}/: .env.example.jinja  .env.jinja  .gitignore  .pre-commit-config.yaml  README.md.jinja  Taskfile.yaml.jinja  pyproject.toml.jinja  pyrightconfig.json  ruff.toml
templates/fastapi_template/{{ project_name }}/.devcontainer/: Dockerfile.jinja  docker-compose.dev.yml.jinja  docker-compose.yml.jinja
templates/fastapi_template/{{ project_name }}/.hooks/: branch
templates/fastapi_template/{{ project_name }}/scripts/: delete
templates/fastapi_template/{{ project_name }}/src/: __main__.py.jinja
templates/fastapi_template/{{ project_name }}/src/{{ project_slug }}/api/: _granian.py.jinja  application.py.jinja  cli.py.jinja  lifespan.py.jinja
templates/fastapi_template/{{ project_name }}/src/{{ project_slug }}/connection/: __init__.py.jinja  {% if database %}database.py{% endif %}.jinja
templates/fastapi_template/{{ project_name }}/src/{{ project_slug }}/connection{% if database %} connection {% endif %}/: __init__.py.jinja
templates/fastapi_template/{{ project_name }}/src/{{ project_slug }}/errors/: __init__.py  base_error.py
templates/fastapi_template/{{ project_name }}/tests/: conftest.py.jinja  test_app.py.jinja  test_health.py.jinja
templates/fastapi_template/{{ project_name }}/tests/integration/: test_api.py
templates/fastapi_template/{{ project_name }}/tests/unit/: test_config.py.jinja
tests/: __init__.py  test_app.py  test_banner.py
(+21 files in other folders)
